[package]
name = "rchef"
version = "0.1.0"
authors = ["bool <booleancoercion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.64"
if_chain = "1.0.2"
lazy_static = "1.5.0"
phf = { version="0.11.2", features=["macros"] }
rand = "0.8.5"
num-bigint = "0.4.6"
clap = "4.5.20"
